; ModuleID = '/home/carl/AnghaBench/RetroArch/input/common/extr_input_x11_common.c_x_mouse_state_wheel.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/common/extr_input_x11_common.c_x_mouse_state_wheel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@x11_mouse_wu = common dso_local global i32 0, align 4
@x11_mouse_wd = common dso_local global i32 0, align 4
@x11_mouse_hwu = common dso_local global i32 0, align 4
@x11_mouse_hwd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @x_mouse_state_wheel(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %18 [
    i32 128, label %6
    i32 129, label %9
    i32 130, label %12
    i32 131, label %15
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @x11_mouse_wu, align 4
  store i32 %7, i32* %4, align 4
  store i32 0, i32* @x11_mouse_wu, align 4
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @x11_mouse_wd, align 4
  store i32 %10, i32* %4, align 4
  store i32 0, i32* @x11_mouse_wd, align 4
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load i32, i32* @x11_mouse_hwu, align 4
  store i32 %13, i32* %4, align 4
  store i32 0, i32* @x11_mouse_hwu, align 4
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @x11_mouse_hwd, align 4
  store i32 %16, i32* %4, align 4
  store i32 0, i32* @x11_mouse_hwd, align 4
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %19

18:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %15, %12, %9, %6
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
